# res-ADNI

./: .gitignore  README.md  pyproject.toml
adni/extraction/: build_adnimerge.py  cli.py
adni/matching/: cli.py
adnimerge_py/: README.md
docs/: A4_protocol.md
src/a4/: cli.py  clinical.py  config.py  inventory.py  pipeline.py
src/adni/extraction/: cli.py
src/adni/matching/: cli.py  config.py  matching.py
